syntax = "proto3";
package network.foxden.tapemgr.inventory;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/FoxDenHome/tapemgr/storage/inventory";

message ProtoFile {
    // 1
    int64 size = 2;
    google.protobuf.Timestamp modified_time = 3;
}

message ProtoTape {
    string barcode = 1;
    int64 size = 2;
    int64 free = 3;
    // 4
    map <string, ProtoFile> files = 5;
}
